--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 defaultTasks 'clean', 'build'
 
-apply plugin: 'java'
+apply plugin: 'groovy'
 apply plugin: 'idea'
 apply plugin: 'eclipse'
 
@@ -23,7 +23,8 @@ idea.module {
 
 dependencies {
     compile 'org.slf4j:slf4j-api:1.7.5',
-            'commons-lang:commons-lang:2.6'
+            'commons-lang:commons-lang:2.6',
+            'joda-time:joda-time:2.9.9'
 
     runtime 'org.slf4j:slf4j-log4j12:1.7.5',
             'log4j:log4j:1.2.17'
@@ -32,5 +33,7 @@ dependencies {
             'org.mockito:mockito-core:1.9.5',
             'org.assertj:assertj-core:1.6.1',
             'commons-io:commons-io:2.4',
-            'org.jbehave:jbehave-core:3.8'
+            'org.jbehave:jbehave-core:3.8',
+            'org.spockframework:spock-core:1.1-groovy-2.4',
+            'org.codehaus.groovy:groovy:2.4.0'
 }
